--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "shipyard",
   "version": "0.1.0",
   "description": "Shipyard",
-  "main": "./src/js/index.js",
+  "main": "./src/js/server/index.js",
   "directories": {
     "test": "test"
   },
