--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "shipyard",
   "version": "0.1.0",
   "description": "Shipyard",
-  "main": "./src/js/server/index.js",
+  "main": "../../js/server/index.js",
   "directories": {
     "test": "test"
   },
@@ -15,11 +15,13 @@
     "typescript": "^1.7.5"
   },
   "dependencies": {
-    "archiver": "^0.20.0",
+    "bluebird": "^3.1.1",
     "body-parser": "^1.13.3",
     "config-parser": "^0.1.0",
     "express": "^4.13.3",
     "fs-extra": "^0.26.3",
+    "jquery": "^2.1.4",
+    "lodash": "^3.10.1",
     "mime": "^1.3.4"
   }
 }
