--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
 			"name": "Launch",
 			"type": "node",
 			"request": "launch",
-			"program": "./src/js/index.js",
+			"program": "./src/js/server/index.js",
 			"stopOnEntry": false,
 			"args": [],
 			"cwd": ".",
