--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,12 +5,14 @@
 // ${fileDirname}: the current opened file's dirname
 // ${fileExtname}: the current opened file's extension
 // ${cwd}: the current working directory of the spawned process
-
+	
 {
-	"version": "0.1.0",
-	"command": "tsc",
-	"isShellCommand": true,
-	"showOutput": "silent",
-	"args": ["-p", "."],
-	"problemMatcher": "$tsc"
+    "version": "0.1.0",
+    "command": "PowerShell.exe",
+    "isShellCommand": true,
+    "args": [
+        "-NoProfile",
+        "./build.ps1"
+    ],
+    "problemMatcher": "$tsc"
 }
