Generating RE missions mostly done.

--- a/src/ts/client/tsconfig.json
+++ b/src/ts/client/tsconfig.json
@@ -15,6 +15,7 @@
         "./Hull3.ts",
         "./Mission.ts",
         "./View.ts",
+        "./re/RandomEngagements.ts",
         "./typings/tsd.d.ts"
     ]
 }
