--- a/src/ts/server/tsconfig.json
+++ b/src/ts/server/tsconfig.json
@@ -15,6 +15,8 @@
         "./App.ts",
         "./Hull3.ts",
         "./Mission.ts",
+        "./re/RandomEngagements.ts",
+        "./re/EvalPrettyPrinter.ts",
         "./Settings.ts",
         "./typings/tsd.d.ts"
     ]
