Admiral zone configuration added.

--- a/src/ts/client/tsconfig.json
+++ b/src/ts/client/tsconfig.json
@@ -12,6 +12,7 @@
     },
     "files": [
         "./App.ts",
+        "./Admiral.ts",
         "./Hull3.ts",
         "./Mission.ts",
         "./View.ts",
