Adding RE generation with a bunch of copy-paste and hacks. This really needs a rewrite now...

--- a/src/ts/client/tsconfig.json
+++ b/src/ts/client/tsconfig.json
@@ -18,6 +18,8 @@
         "./View.ts",
         "./extra/ts/App.ts",
         "./extra/ts/View.ts",
+        "./extra/re/App.ts",
+        "./extra/re/View.ts",
         "./typings/tsd.d.ts"
     ]
 }
