--- a/package.json
+++ b/package.json
@@ -12,15 +12,25 @@
   "author": "Laszlo Major",
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^1.7.5"
+    "@types/body-parser": "0.0.33",
+    "@types/express": "^4.0.34",
+    "@types/fs-extra": "0.0.34",
+    "@types/jquery": "^2.0.34",
+    "@types/lodash": "^4.14.39",
+    "@types/mime": "0.0.29",
+    "json-loader": "^0.5.4",
+    "source-map-loader": "^0.1.5",
+    "ts-loader": "^1.2.2",
+    "typescript": "^2.0.3",
+    "webpack-node-externals": "^1.5.4"
   },
   "dependencies": {
     "body-parser": "^1.13.3",
     "config-parser": "^0.1.0",
     "express": "^4.13.3",
     "fs-extra": "^0.26.3",
-    "jquery": "^2.1.4",
-    "lodash": "^3.10.1",
+    "jquery": "^3.1.1",
+    "lodash": "^4.17.2",
     "mime": "^1.3.4"
   }
 }
