--- a/src/ts/client/tsconfig.json
+++ b/src/ts/client/tsconfig.json
@@ -6,10 +6,9 @@
         "removeComments": true,
         "noLib": false,
         "preserveConstEnums": true,
-        "declaration": true,
-        "suppressImplicitAnyIndexErrors": true,
-        "outDir": "../../js"
+        "suppressImplicitAnyIndexErrors": true
     },
+
     "files": [
         "./App.ts",
         "./Admiral.ts",
@@ -19,7 +18,6 @@
         "./extra/ts/App.ts",
         "./extra/ts/View.ts",
         "./extra/re/App.ts",
-        "./extra/re/View.ts",
-        "./typings/tsd.d.ts"
+        "./extra/re/View.ts"
     ]
 }
