--- a/src/ts/server/tsconfig.json
+++ b/src/ts/server/tsconfig.json
@@ -6,10 +6,9 @@
         "removeComments": true,
         "noLib": false,
         "preserveConstEnums": true,
-        "declaration": true,
-        "suppressImplicitAnyIndexErrors": true,
-        "outDir": "../../js"
+        "suppressImplicitAnyIndexErrors": true
     },
+
     "files": [
         "./index.ts",
         "./Admiral.ts",
@@ -17,7 +16,6 @@
         "./Common.ts",
         "./Hull3.ts",
         "./Mission.ts",
-        "./Settings.ts",
-        "./typings/tsd.d.ts"
+        "./Settings.ts"
     ]
 }
