Migrate to webpack 2.

--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "json-loader": "^0.5.4",
     "source-map-loader": "^0.1.5",
     "ts-loader": "^1.2.2",
-    "typescript": "^2.0.3",
-    "webpack-node-externals": "^1.5.4"
+    "typescript": "^2.0.3"
   },
   "dependencies": {
     "body-parser": "^1.13.3",
