--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack"
   },
   "author": "Laszlo Major",
   "license": "MIT",
@@ -22,7 +22,8 @@
     "json-loader": "^0.5.4",
     "source-map-loader": "^0.1.5",
     "ts-loader": "^1.2.2",
-    "typescript": "^2.0.3"
+    "typescript": "^2.0.3",
+    "webpack": "^2.3.2"
   },
   "dependencies": {
     "body-parser": "^1.13.3",
